--- a/themes/coder/assets/scss/_shortcodes.scss
+++ b/themes/coder/assets/scss/_shortcodes.scss
@@ -34,6 +34,11 @@ $sm-breakpoint: $menu-width + $body-min-width + 3rem !default;
   .gdoc-post__anchor {
     display: none;
   }
+
+  p {
+    margin: 0;
+    margin-bottom: 1rem;
+  }
 }
 
 .flex {
